<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvRegisto1"
        style="@style/AppTheme.TextViewTitulos"
        android:text="@string/regist"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etNome"
        style="@style/AppTheme.TextViewEditTextCentral"
        android:hint="@string/Nome" />

    <EditText
        android:id="@+id/etTelemovel"
        style="@style/AppTheme.TextViewEditTextCentral"
        android:inputType="phone"
        android:hint="@string/Telemovel"/>

    <EditText
        android:id="@+id/etMail"
        style="@style/AppTheme.TextViewEditTextCentral"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etNif"
        style="@style/AppTheme.TextViewEditTextCentral"
        android:hint="@string/Nif"
        android:inputType="number" />

    <EditText
        android:id="@+id/etPass"
        style="@style/AppTheme.TextViewEditTextCentral"
        android:hint="@string/Pass"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/etPassRepetir"
        style="@style/AppTheme.TextViewEditTextCentral"
        android:hint="@string/Pass"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/bttRegisto"
       style="@style/AppTheme.TextViewBotaoCentral"
        android:text="@string/Registo" />
</LinearLayout>