<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.fragmentos.ContactosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvContactos"

            style="@style/AppTheme.TextViewTitulos"
            android:layout_marginTop="32dp"
            android:text="@string/contactos" />

        <TextView
            android:id="@+id/tvNomeRestaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/textView4"
                app:srcCompat="@drawable/ic_home"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tvMorada"
                style="@style/AppTheme.TextViewPadrao"
                android:layout_marginEnd="10dp"
                android:text="@string/morada" />

            <TextView
                android:id="@+id/tvCodPostal"
                style="@style/AppTheme.TextViewPadrao"
                android:text="@string/codpostal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/textViewTelemovel"
                app:srcCompat="@drawable/ic_contactos"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView
                android:id="@+id/tvTelefone"
                style="@style/AppTheme.TextViewPadrao"
                android:layout_marginEnd="20dp"
                android:text="@string/telefone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/textView3"
                app:srcCompat="@drawable/ic_smartphone"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <TextView
                android:id="@+id/tvTelemovel"
                style="@style/AppTheme.TextViewPadrao"
                android:layout_marginEnd="20dp"
                android:text="@string/telemovel" />

        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/textView5"
                app:srcCompat="@drawable/ic_mail"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tvEmail"
                style="@style/AppTheme.TextViewPadrao"
                android:text="@string/mailmakeaburger" />
        </LinearLayout>


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:id="@+id/imagens"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewHamburguer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@mipmap/hamburguer"/>

                <ImageView
                    android:id="@+id/imageViewEmpregadoHamburguer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@mipmap/empregado_hamburgueria"/>

                <ImageView
                    android:id="@+id/imageViewHamburgueria"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@mipmap/hamburgueria" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</FrameLayout>
