<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/textAlterar"
        style="@style/AppTheme.TextViewTitulos"
        android:layout_marginTop="32dp"
        android:text="@string/bttAlterar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/etNome"
        style="@style/AppTheme.TextViewEditTextCentral"
        android:hint="@string/Titulo" />



    <TextView
        android:id="@+id/tViewPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/total"
        android:textAlignment="viewEnd" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



                <TextView
                    android:id="@+id/tViewIngredientes1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/tviewingredientes" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:entries="@array/items_lugares"
                    android:gravity="center_horizontal"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tViewIngredientes2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/tviewingredientes"
                    />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:entries="@array/items_lugares"
                    android:gravity="center_horizontal"
                    android:textAlignment="center" />


                <TextView
                    android:id="@+id/tViewIngredientes3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/tviewingredientes" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:entries="@array/items_lugares"
                    android:gravity="center_horizontal"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tViewIngredientes4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/tviewingredientes" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:entries="@array/items_lugares"
                    android:gravity="center_horizontal"
                    android:textAlignment="center" />


            <Button
                android:id="@+id/bttAdicionar"
                style="@style/AppTheme.TextViewBotaoCentral"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:text="@string/bttAdicionarNovo"
                android:textAlignment="center" />
           </LinearLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>